--- a/src/styles/sass/base.scss
+++ b/src/styles/sass/base.scss
@@ -24,14 +24,9 @@ strong,
 dl,
 dt,
 dd,
-table,
-tbody,
-thead,
-tfoot,
-audio,
-video,
 header,
 section,
+figure,
 main,
 article,
 aside,
@@ -47,8 +42,8 @@ html {
     height: 100%;
     width: 100%;
     // 将移除的内容进行隐藏
-    overflow: hidden;
-
+    // overflow: hidden;
+    margin-bottom: 300px;
     font-family: "Mcrosoft YaHei", "STHeiti", "SimSun", "KaiTi";
 }
 
