--- a/src/styles/sass/base.scss
+++ b/src/styles/sass/base.scss
@@ -39,11 +39,11 @@ footer {
 // 取消滚动条的默认样式
 body,
 html {
-    height: 100%;
+    // height: 100%;
     width: 100%;
     // 将移除的内容进行隐藏
     // overflow: hidden;
-    margin-bottom: 300px;
+    margin-bottom: 100px;
     font-family: "Mcrosoft YaHei", "STHeiti", "SimSun", "KaiTi";
 }
 
