--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -392,9 +392,32 @@ main .banner_wrap .banner_right .banner_right_btn ul li a {
   right: 0;
 }
 
-footer {
-  height: 80px;
-  background-color: red;
+footer .feedback_wrap {
+  height: 4.23rem;
+  background-color: #38373d;
+}
+footer .copyright_wrap {
+  position: relative;
+  padding: 0.46rem 0 0.37rem;
+  background-color: #2c3e50;
+  text-align: center;
+}
+footer .copyright_wrap::after {
+  content: "";
+  position: absolute;
+  top: -0.27rem;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 0.18rem solid transparent;
+  border-bottom-color: #2c3e50;
+}
+footer .copyright_wrap p {
+  font-size: 0.12rem;
+  color: #fff;
+}
+footer .copyright_wrap p:first-child {
+  margin-bottom: 0.1rem;
 }
 
 /*# sourceMappingURL=index.css.map */
