--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -379,6 +379,32 @@ main {
 
 // 底部区域样式
 footer {
-  height: 80px;
-  background-color: red;
+  .feedback_wrap {
+    height: 4.23rem;
+    background-color: #38373d;
+  }
+
+  .copyright_wrap {
+    position: relative;
+    padding: .46rem 0 .37rem;
+    background-color: #2c3e50;
+    text-align: center;
+    &::after {
+      content: '';
+      position: absolute;
+      top: -.27rem;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border: .18rem solid transparent;
+      border-bottom-color: #2c3e50;
+    }
+    p {
+      font-size: .12rem;
+      color: #fff;
+      &:first-child {
+        margin-bottom: .1rem;
+      }
+    }
+  }
 }
