--- a/src/styles/sass/base.scss
+++ b/src/styles/sass/base.scss
@@ -31,7 +31,9 @@ main,
 article,
 aside,
 nav,
-footer {
+footer,
+form,
+input {
     margin: 0;
     padding: 0;
 }
@@ -39,11 +41,10 @@ footer {
 // 取消滚动条的默认样式
 body,
 html {
-    // height: 100%;
+    height: 100%;
     width: 100%;
     // 将移除的内容进行隐藏
     // overflow: hidden;
-    margin-bottom: 100px;
     font-family: "Mcrosoft YaHei", "STHeiti", "SimSun", "KaiTi";
 }
 
@@ -58,7 +59,7 @@ a {
     color: #000;
     //去掉a标签在移动端点击背景颜色
     -webkit-tap-highlight-color: none;
-    outline-color: none;
+    outline: none 0;
     text-decoration: none;
 }
 
@@ -70,9 +71,13 @@ img {
 }
 
 //清除input标签点击时外轮廓高亮
-input {
-    outline-color: none;
+// 清除文本域点击时外边框高亮以及边框
+input,
+textarea {
+    outline: none;
+    border: 0 none;
 }
+
 
 // 清除列表前的小黑点
 
