解决了banner区域的问题，并将完成了代码部分的编写(监听的方式不对)

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,11 +1,13 @@
-@import './base.scss';
+@charset "utf-8";
+@import './base.scss';   
 
 $color: #b3b2b2;
 $border_box: border-box;
 $inline_block: inline-block;
 $color1: #5f5f61;
 $width612:6.12rem;
-$white: #c8cdd1;
+$color2: #c8cdd1;
+$white:#fff;
 
 // 头部区域
 header {
@@ -54,7 +56,7 @@ header {
       width: 100%;
       height: 100%;
       text-indent: -1000rem;
-      background-image: url('../../assets/images/logo.png');
+      background-image: url('../assets/images/logo.png');
       background-repeat: no-repeat;
       background-size: contain;
     }
@@ -99,79 +101,95 @@ header {
 }
 
 // banner 区域
-
 main {
-  padding-top: 1.37rem;
-  padding-right: 1.05rem;
   width: 100%;
-  background-image: url('../../assets/images/banner_bg.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: 0 0;
-  box-sizing: $border_box;
 
   .banner_wrap {
-    font-size: 0;
+    background-image: url('../assets/images/banner_bg_t.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: 0 0;
+    box-sizing: $border_box;
 
     // 第一个耳机区域的样式
     figure {
-      display: $inline_block;
-
-      img {
-        // float: left;
-
-      }
+      margin-top: 1.38rem;
+      float: left;
     }
 
     .banner_right {
-      float: right;
-      display: $inline_block;
-      margin-top: .48rem;
-      background-color: red;
-      color: #fff;
-      text-align: right;
+      margin-top: 1.84rem;
+      float: left;
+      color: $white;
 
       p {
+        margin-left: -.84rem;
         font-size: .26rem;
+
       }
 
       h4 {
+        margin-top: .34rem;
+        margin-bottom: .87rem;
         font-size: .3rem;
+        text-align: right;
       }
 
       .banner_right_btn {
-        ul {
-          display: flex;
-          justify-content: flex-end;
-          padding-right: .05rem;
-          text-align: right;
+        text-align: right;
 
-          li {
-            // float: left;
-            width: 1.7rem;
-            background-color: #3498db;
-            border-radius: .08rem;
-            font-size: .18rem;
-            line-height: .56rem;
-            text-align: center;
-
-            &:hover a {
-              font-weight: bold;
-            }
-
-            &:not(:last-child) {
-              margin-right: .16rem;
-              background-color: #1abc9c;
-            }
-
-            a {
-              color: #fff;
-            }
+        a {
+          display: inline-block;
+          padding: .2rem .47rem;
+          border-radius: 5px;
+          box-sizing: $border_box;
+          color: $white;
+          font-size: .18rem;
+          &:hover {
+            color: #666;
           }
+        }
+
+        .btn_1 {
+          background-color: #1abc9c;
+        }
+
+        .btn_2 {
+          background-color: #3498db;
         }
       }
     }
   }
+
+  // 关于我们
+  .about_wrap {
+    color: $white;
+    font-size: 0;
+
+    .about_content {
+      float: left;
+      margin: 1rem .5rem 0 1.56rem;
+
+      h4 {
+        margin-bottom: .2rem;
+        color: #34495e;
+        font-size: .18rem;
+      }
+
+      p {
+        width: 6.20rem;
+        color: #34495e;
+        font-size: .12rem;
+        line-height: .28rem;
+      }
+    }
+
+    figure {
+      float: left;
+      margin-top: -1rem;
+    }
+  }
+
 }
 
 // what we do
@@ -286,7 +304,7 @@ main {
 .swiper_wrap {
   margin-bottom: .84rem;
   height: 6.5rem;
-  background-image: url('../../assets/images/picture_bg.jpg');
+  background-image: url('../assets/images/picture_bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -332,18 +350,18 @@ main {
       margin-top: 1.1rem;
 
       &:first-child {
-        background-image: url('../../assets/images/picture_01.jpg');
+        background-image: url('../assets/images/picture_01.jpg');
       }
 
       &:nth-of-type(2) {
         width: 3.7rem;
         height: 3.7rem;
-        background-image: url('../../assets/images/picture_02.jpg');
+        background-image: url('../assets/images/picture_02.jpg');
         margin: 0 .6rem;
       }
 
       &:nth-of-type(2)~li {
-        background-image: url('../../assets/images/picture_03.jpg');
+        background-image: url('../assets/images/picture_03.jpg');
       }
 
       &:not(:nth-of-type(2))::after {
@@ -367,11 +385,11 @@ main {
 
       .pre {
         left: 0;
-        background-image: url('../../assets/images/btn_left.png');
+        background-image: url('../assets/images/btn_left.png');
       }
 
       .next {
-        background-image: url('../../assets/images/btn_right.png');
+        background-image: url('../assets/images/btn_right.png');
         right: 0;
       }
     }
@@ -430,15 +448,15 @@ footer {
             vertical-align: top;
 
             &.icon_phone {
-              background-image: url('../../assets/images/phone.png')
+              background-image: url('../assets/images/phone.png')
             }
 
             &.icon_email {
-              background-image: url('../../assets/images/email.png')
+              background-image: url('../assets/images/email.png')
             }
 
             &.icon_seat {
-              background-image: url('../../assets/images/seat.png')
+              background-image: url('../assets/images/seat.png')
             }
           }
 
@@ -466,7 +484,7 @@ footer {
           padding: .13rem .12rem .15rem;
           background-color: rgba(0, 0, 0, .5);
           border: 0 none;
-          color: $white;
+          color: $color2;
           outline: none;
           font-size: .13rem;
           border-radius: 5px;
@@ -481,7 +499,7 @@ footer {
           border: 0 none;
           box-sizing: $border_box;
           border-radius: 5px;
-          color: $white;
+          color: $color2;
           outline: none;
           // 禁止文本域可缩放功能  -- 小三角
           resize: none;
