--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* 
+/*  
   初始化样式文件
 */
 html,
@@ -104,6 +104,10 @@ figure {
   display: block;
 }
 
+body {
+  font-size: 16px;
+}
+
 header {
   width: 80%;
   margin: 0 auto;
@@ -141,7 +145,7 @@ header .logo a {
   width: 100%;
   height: 100%;
   text-indent: -1000rem;
-  background-image: url("../../assets/images/logo.png");
+  background-image: url("../assets/images/logo.png");
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -173,58 +177,76 @@ header nav .lis li:first-child a {
 }
 
 main {
-  padding-top: 1.37rem;
-  padding-right: 1.05rem;
   width: 100%;
-  background-image: url("../../assets/images/banner_bg.jpg");
+}
+main .banner_wrap {
+  background-image: url("../assets/images/banner_bg_t.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: 0 0;
   box-sizing: border-box;
 }
-main .banner_wrap {
-  font-size: 0;
-}
 main .banner_wrap figure {
-  display: inline-block;
+  margin-top: 1.38rem;
+  float: left;
 }
 main .banner_wrap .banner_right {
-  float: right;
-  display: inline-block;
-  margin-top: 0.48rem;
-  background-color: red;
+  margin-top: 1.84rem;
+  float: left;
   color: #fff;
-  text-align: right;
 }
 main .banner_wrap .banner_right p {
+  margin-left: -0.84rem;
   font-size: 0.26rem;
 }
 main .banner_wrap .banner_right h4 {
+  margin-top: 0.34rem;
+  margin-bottom: 0.87rem;
   font-size: 0.3rem;
-}
-main .banner_wrap .banner_right .banner_right_btn ul {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 0.05rem;
   text-align: right;
 }
-main .banner_wrap .banner_right .banner_right_btn ul li {
-  width: 1.7rem;
-  background-color: #3498db;
-  border-radius: 0.08rem;
+main .banner_wrap .banner_right .banner_right_btn {
+  text-align: right;
+}
+main .banner_wrap .banner_right .banner_right_btn a {
+  display: inline-block;
+  padding: 0.2rem 0.47rem;
+  border-radius: 5px;
+  box-sizing: border-box;
+  color: #fff;
   font-size: 0.18rem;
-  line-height: 0.56rem;
-  text-align: center;
 }
-main .banner_wrap .banner_right .banner_right_btn ul li:hover a {
-  font-weight: bold;
+main .banner_wrap .banner_right .banner_right_btn a:hover {
+  color: #666;
 }
-main .banner_wrap .banner_right .banner_right_btn ul li:not(:last-child) {
-  margin-right: 0.16rem;
+main .banner_wrap .banner_right .banner_right_btn .btn_1 {
   background-color: #1abc9c;
 }
-main .banner_wrap .banner_right .banner_right_btn ul li a {
+main .banner_wrap .banner_right .banner_right_btn .btn_2 {
+  background-color: #3498db;
+}
+main .about_wrap {
   color: #fff;
+  font-size: 0;
+}
+main .about_wrap .about_content {
+  float: left;
+  margin: 1rem 0.5rem 0 1.56rem;
+}
+main .about_wrap .about_content h4 {
+  margin-bottom: 0.2rem;
+  color: #34495e;
+  font-size: 0.18rem;
+}
+main .about_wrap .about_content p {
+  width: 6.2rem;
+  color: #34495e;
+  font-size: 0.12rem;
+  line-height: 0.28rem;
+}
+main .about_wrap figure {
+  float: left;
+  margin-top: -1rem;
 }
 
 .introduction {
@@ -320,7 +342,7 @@ main .banner_wrap .banner_right .banner_right_btn ul li a {
 .swiper_wrap {
   margin-bottom: 0.84rem;
   height: 6.5rem;
-  background-image: url("../../assets/images/picture_bg.jpg");
+  background-image: url("../assets/images/picture_bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -363,16 +385,16 @@ main .banner_wrap .banner_right .banner_right_btn ul li a {
   margin-top: 1.1rem;
 }
 .swiper_wrap .picture_container li:first-child {
-  background-image: url("../../assets/images/picture_01.jpg");
+  background-image: url("../assets/images/picture_01.jpg");
 }
 .swiper_wrap .picture_container li:nth-of-type(2) {
   width: 3.7rem;
   height: 3.7rem;
-  background-image: url("../../assets/images/picture_02.jpg");
+  background-image: url("../assets/images/picture_02.jpg");
   margin: 0 0.6rem;
 }
 .swiper_wrap .picture_container li:nth-of-type(2) ~ li {
-  background-image: url("../../assets/images/picture_03.jpg");
+  background-image: url("../assets/images/picture_03.jpg");
 }
 .swiper_wrap .picture_container li:not(:nth-of-type(2))::after {
   content: "";
@@ -389,10 +411,10 @@ main .banner_wrap .banner_right .banner_right_btn ul li a {
 }
 .swiper_wrap .picture_container .btn_wrap .pre {
   left: 0;
-  background-image: url("../../assets/images/btn_left.png");
+  background-image: url("../assets/images/btn_left.png");
 }
 .swiper_wrap .picture_container .btn_wrap .next {
-  background-image: url("../../assets/images/btn_right.png");
+  background-image: url("../assets/images/btn_right.png");
   right: 0;
 }
 
@@ -439,13 +461,13 @@ footer .feedback_wrap .feedback_left .qrC_content p i {
   vertical-align: top;
 }
 footer .feedback_wrap .feedback_left .qrC_content p i.icon_phone {
-  background-image: url("../../assets/images/phone.png");
+  background-image: url("../assets/images/phone.png");
 }
 footer .feedback_wrap .feedback_left .qrC_content p i.icon_email {
-  background-image: url("../../assets/images/email.png");
+  background-image: url("../assets/images/email.png");
 }
 footer .feedback_wrap .feedback_left .qrC_content p i.icon_seat {
-  background-image: url("../../assets/images/seat.png");
+  background-image: url("../assets/images/seat.png");
 }
 footer .feedback_wrap .feedback_right {
   float: left;
