--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,4 +1,5 @@
-/* 
+@charset "utf-8";
+/*  
   初始化样式文件
 */
 html,
@@ -120,4 +121,7 @@ aside,
 footer,
 figure {
     display: block;
+}
+body{
+    font-size: 16px;
 }
