删除了最新资讯中的a标签的hover效果

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -288,9 +288,9 @@ main {
         vertical-align: middle;
         color: $color1;
 
-        &:hover {
-          font-weight: bold;
-        }
+        // &:hover { 
+        //   font-weight: bold;
+        // }
 
         span {
           float: right;
